# rftg

./: Cargo.toml  README.md
examples/: enum.rs
src/: enums.txt  main.rs  rcat
