[package]
name = "rftg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"
tty-interface = "4.0.0"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8.16"
futures = "0.3.29"
local-ip-address = "0.5.6"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
